# huumanity.app

./: .gitignore  CLAUDE.md  middleware.ts  package-lock.json  package.json  proxy.ts
.claude/: launch.json
.github/workflows/: release.yml
app/: globals.css  icon.tsx  layout.tsx  page.tsx
app/api/admin/grant-pro/: route.ts
app/api/admin/set-custom-limit/: route.ts
app/api/admin/sync-subscription/: route.ts
app/api/auth/status/: route.ts
app/api/desktop/sign-in-token/: route.ts
app/api/humanize/: route.ts
app/api/stripe/checkout/: route.ts
app/api/stripe/portal/: route.ts
app/api/stripe/webhook/: route.ts
app/api/subscription/status/: route.ts
app/api/waitlist/: route.ts
app/app-verified/: page.tsx
app/components/: ExternalRewritePanel.tsx  HuuLogo.tsx  ScratchpadEditor.tsx  VoiceEditor.tsx
app/download/: DownloadPageClient.tsx  page.tsx
app/editor/: page.tsx
app/join/: page.tsx
app/lib/: clerkAppearance.ts  isRephrashable.ts  stripe.ts  subscription.ts
app/payment-success/: page.tsx
app/selector/: page.tsx
app/sign-in/[[...sign-in]]/: page.tsx
app/sign-up/[[...sign-up]]/: page.tsx
app/waitlist/: page.tsx
docs/: TAURI_STEP_1.md  TAURI_STEP_2.md
scripts/: build-tauri-frontend.mjs  copy-tauri-bundle.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: lib.rs
