[package]
name = "huu"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# macos-private-api stays on the base dependency for ALL targets: tauri-build
# validates it against `macOSPrivateApi: true` in tauri.conf.json regardless of
# platform, and the feature is internally cfg-gated to macOS so it's a harmless
# no-op on Windows/Linux.
tauri = { version = "2.11.2", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time"] }
arboard = "3"
enigo = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
] }
